perf(information user): fix interface encrypt key and information

--- a/src/main/webapp/views/Admin/css/main.css
+++ b/src/main/webapp/views/Admin/css/main.css
@@ -366,6 +366,21 @@ iframe {
     overflow: hidden;
 }
 
+/** Xử lý cho khoá.
+
+ */
+#expand_pubKey {
+    position: relative;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.expand_key_area {
+    background-color: #e9ecef;
+    justify-content: space-between;
+    border-radius: 5px;
+}
+
 
 
 
